Chore: Made The UI&UX better